feat(style): new colors

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -13,5 +13,15 @@
   --background-danger-bold: #b04632;
   --background-danger-bold-hovered: #eb5a46;
   --background-danger-bold-pressed: #933b27;
+  --background-warning: #fffae6;
+  --background-warning-bold: #f2d024;
+  --background-warning-bold-hovered: #ffdf5d;
+  --background-warning-bold-pressed: #d0a016;
+  --background-warning-a: hsla(48, 100%, 95%, 0.04);
+  --background-warning-bold-a: hsla(50, 89%, 55%, 0.04);
+  --background-warning-bold-hovered-a: hsla(48, 100%, 68%, 0.08);
+  --background-warning-bold-hovered2-a: hsla(48, 100%, 68%, 0.24);
+  --background-warning-bold-pressed-a: hsla(45, 81%, 45%, 0.18);
+  --color-text-subtle: #5e6c84;
   --border-radius: 3px;
 }
